fix banner on small screens

--- a/css/style-small.css
+++ b/css/style-small.css
@@ -108,8 +108,10 @@ header.major h2 + p {
 
 /* One */
 
-#one:before {
+#about:before {
   height: 7em;
+  background-size: cover;
+  background-position: center center;
 }
 
 /* Footer */
